--- a/.mage/config/environment/test.yml
+++ b/.mage/config/environment/test.yml
@@ -17,6 +17,6 @@ hosts:
 tasks:
     pre-deploy: null
     on-deploy: null
-    post-release: 
+    post-release: null
+    post-deploy: 
       - { level27-local-command: { name: 'make publish', workingdir: / } }
-    post-deploy: null
