test to fix publish

--- a/.mage/config/environment/test.yml
+++ b/.mage/config/environment/test.yml
@@ -18,5 +18,6 @@ tasks:
     pre-deploy: null
     on-deploy: null
     post-release: 
+      - { level27-local-command: { name: 'pwd', workingdir: / } }
       - { level27-local-command: { name: 'make publish', workingdir: / } }
     post-deploy: null
