--- a/.mage/config/environment/test.yml
+++ b/.mage/config/environment/test.yml
@@ -18,6 +18,4 @@ tasks:
     pre-deploy: null
     on-deploy: null
     post-release: null 
-    post-deploy: 
-      - { level27-local-command: { name: 'pwd', workingdir: / } }
-      - { level27-local-command: { name: 'make publish', workingdir: / } }
+    post-deploy: null
