--- a/.mage/config/environment/test.yml
+++ b/.mage/config/environment/test.yml
@@ -17,5 +17,7 @@ hosts:
 tasks:
     pre-deploy: null
     on-deploy: null
-    post-release: null 
+    post-release: 
+      - { level27-local-command: { name: 'make publish', workingdir: / } } 
     post-deploy: null
+
